--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -6,7 +6,11 @@
 {% endif %}
 {% block head_stylesheets %}
     <link rel="stylesheet" href="{{ asset('bundles/easyadmin/stylesheet/bootstrap.min.css') }}">
-    <link rel="stylesheet" href="{{ path('_easyadmin_render_css') }}">
+    
+    <style>             
+        {{ easyadmin_config('_internal.custom_css')|raw }}
+    </style>
+
     <link rel="stylesheet" href="{{ asset('bundles/core/stylesheet/login.css') }}">
 {% endblock head_stylesheets %}
 <div class="container col-md-4 col-md-offset-4">
