--- a/src/UserBundle/Resources/views/Default/result.html.twig
+++ b/src/UserBundle/Resources/views/Default/result.html.twig
@@ -4,6 +4,7 @@
         <ul>
             <li>Nom: {{ key }}</li>
             <li>Adresse: {{ station }}</li>
+            <li><a href="https://www.google.fr/maps/place/{{ station }}">Clique</a> </li>
         </ul>
     {% endfor %}
 </ul>
