--- a/src/UserBundle/Resources/views/Default/index.html.twig
+++ b/src/UserBundle/Resources/views/Default/index.html.twig
@@ -26,7 +26,7 @@
                 <option value="{{ key }}">{{ item | lower}}</option>
             {% endfor %}
         </select>
-        <select id="metre" class="soflow distance disable" name="distance">
+        <select id="metre" class="soflow distance disable" name="distance" disabled="disabled">
             <option value="100">100</option>
             <option value="250">250</option>
             <option value="500">500</option>
@@ -110,5 +110,7 @@
 
         .divLogo {
             width: 100%;
+            text-align: center;
+            margin: 5% auto;
         }
 </style>
