--- a/src/UserBundle/Resources/views/Default/index.html.twig
+++ b/src/UserBundle/Resources/views/Default/index.html.twig
@@ -49,6 +49,10 @@
             font-size: 26px;
         }
 
+        .bidon {
+            width: 100px;
+        }
+
         .btn {
             background: #939393;
             border-radius: 10px;
