--- a/src/UserBundle/Resources/views/Default/index.html.twig
+++ b/src/UserBundle/Resources/views/Default/index.html.twig
@@ -1,5 +1,5 @@
 <div class="divLogo">
-    <h1>Easy Culture</h1>
+    <img src="https://images-ap.curseapp.net/a60de641-8fe5-446e-9157-1f5e1cc1569b/Objet-dynamique-vectoriel.png" alt="">
 </div>
 <form class="form" method="post" action="{{ path('select') }}">
     <label for="address">Choissisez votre lieu culturel</label>
@@ -47,10 +47,6 @@
     }
         form label {
             font-size: 26px;
-        }
-
-        .bidon {
-            width: 100px;
         }
 
         .btn {
@@ -116,5 +112,9 @@
             width: 100%;
             text-align: center;
             margin: 5% auto;
+        }
+
+        .divLogo img{
+            width: 200px;
         }
 </style>
