Mise en forme du login/logout

--- a/src/CoreBundle/Resources/views/Block/tournament_block.html.twig
+++ b/src/CoreBundle/Resources/views/Block/tournament_block.html.twig
@@ -1,4 +1,4 @@
-{% spaceless %}{% trans_default_domain("admin") %}
+{% spaceless %}
     {% for flash_message in app.session.flashBag.get('notice') %}
         <div class="flash-notice">
             {{ flash_message }}
