--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -1,33 +1,32 @@
-{% extends "FOSUserBundle::layout.html.twig" %}
+{% extends "FOSUserBundle::layout.html.twig" %}{% trans_default_domain("admin") %}
 {% block title %}Login{% endblock %}
-{% block fos_user_content %}
+{% block body %}
 {% if error %}
     <div>{{ error|trans({}, 'FOSUserBundle') }}</div>
 {% endif %}
 {% block head_stylesheets %}
-
-    <link rel="stylesheet" href="{{ asset('bundles/core/stylesheet/login.css') }}">
+    <style>
+        .jumbotron {
+            margin-top: 50px;
+        }
+    </style>
 {% endblock head_stylesheets %}
 <div class="container col-md-4 col-md-offset-4">
-    <form action="{{ path("fos_user_security_check") }}" method="post" class="form-signin">
-        <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
-        <h2 class="form-signin-heading">Please sign in</h2>
-        <label for="username">{{ 'security.login.username'|trans({}, 'FOSUserBundle') }}</label>
-        <input type="text" id="username" name="_username" value="{{ last_username }}" class="form-control" placeholder="Username" required autofocus />
+    <div class="jumbotron">
+        <form action="{{ path("fos_user_security_check") }}" method="post" class="form-signin">
+            <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
+            <h2>{{ "Please sign in"|trans({}, 'Admin') }}</h2>
+            <div class="form-group">
+                <label for="username">{{ 'security.login.username'|trans({}, 'FOSUserBundle') }}</label>
+                <input type="text" id="username" name="_username" value="{{ last_username }}" class="form-control" placeholder="Username" required autofocus />
+            </div>
 
-        <label for="password">{{ 'security.login.password'|trans({}, 'FOSUserBundle') }}</label>
-        <input type="password" id="password" name="_password" class="form-control" placeholder="Password" required />
+            <div class="form-group">
+                <label for="password">{{ 'security.login.password'|trans({}, 'FOSUserBundle') }}</label>
+                <input type="password" id="password" name="_password" class="form-control" placeholder="Password" required />
+            </div>
 
-        {#<input type="checkbox" id="remember_me" name="_remember_me" value="on" />
-        <label for="remember_me">{{ 'security.login.remember_me'|trans({}, 'FOSUserBundle') }}</label>#}
-        <div class="checkbox">
-            <label for="remember_me">
-                <input type="checkbox" id="remember_me" value="_remember_me" value="on"> Remember me
-            </label>
-        </div>
-
-        <input type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans({}, 'FOSUserBundle') }}" />
-{#        <button class="btn btn-lg btn-primary btn-block" id="_submit" name="_submit" type="submit">Sign in</button>#}
+        <button class="btn btn-lg btn-primary btn-block" id="_submit" name="_submit" type="submit">{{ 'security.login.submit'|trans({}, 'FOSUserBundle') }}</button>
     </form>
 </div>
-{% endblock fos_user_content %}
+{% endblock body %}
