Page des score :) :)

--- a/src/CoreBundle/Resources/views/Default/scores_tournament.html.twig
+++ b/src/CoreBundle/Resources/views/Default/scores_tournament.html.twig
@@ -1,7 +1,7 @@
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"> 
 {% for group in scores %}
 
-	<table class="table-bordered" style="width:50%; margin:50px auto; padding:20px;">
+	<table class="table-bordered" style="width:40%; float: right; margin:50px 5%; padding:20px;">
 		<thead>
 			<tr>
 			    <th style="padding:20px;">{{ group.nameGroup }}</th>
