--- a/src/CoreBundle/Resources/views/Block/tournament_block.html.twig
+++ b/src/CoreBundle/Resources/views/Block/tournament_block.html.twig
@@ -9,7 +9,9 @@
             <h3 class="box-title">{{ "dashboard.tournament"|trans({}, 'Admin') }}</h3>
         </div>
         <div class="box-body">
-            <a href="{{ path('tournament') }}" class="btn btn-primary">{{ "dashboard.start"|trans({}, 'Admin') }}</a>
+            <form method="post" action="{{ path('tournament') }}">
+                {{ form_widget(form) }}
+            </form>
         </div>
     </div>
 {% endspaceless %}
