style.css des tournois

--- a/src/CoreBundle/Resources/public/css/style.css
+++ b/src/CoreBundle/Resources/public/css/style.css
@@ -1,12 +1,13 @@
 .table {
-    width:40%;
-    float: right;
-    margin:50px 5%;
-    padding:20px;
+    width: 22%;
+    min-width: 300px;
+    margin: 10px 0 0 0;
+    padding: 0;
+    display: inline-table;
 }
 
 .nameScore {
-    width:30%;
+    width:10%;
     text-align:right;
     padding:20px;
 }
@@ -22,4 +23,10 @@
 .score {
     text-align:right;
     padding:20px;
+}
+
+.container {
+    width: 100%;
+    text-align: center;
+    margin-top: 200px;
 }
