Mise en place de l'algorithme de la phase finale

--- a/src/CoreBundle/Resources/views/Block/tournament_block.html.twig
+++ b/src/CoreBundle/Resources/views/Block/tournament_block.html.twig
@@ -11,6 +11,7 @@
         <div class="box-body">
             <form method="post" action="{{ path('tournament') }}">
                 {{ form_widget(form) }}
+                <input type="submit" name="score" class="btn btn-primary" value="clique">
             </form>
         </div>
     </div>
