--- a/src/CoreBundle/Resources/views/Default/scores_tournament.html.twig
+++ b/src/CoreBundle/Resources/views/Default/scores_tournament.html.twig
@@ -1,7 +1,11 @@
 {% extends "::base.html.twig" %}
 
+{% block stylesheets %}
+	<link rel="stylesheet" href="{{ asset('bundles/core/css/style.css') }}">
+{% endblock %}
+
 {% block body %}
-	<div class="container">
+	<div class="score_tournament">
 	{% for group in scores %}
 		<table class="table-bordered table">
 			<thead>
