Add custom import action & Setup ExcelBundle

--- a/src/CoreBundle/Resources/views/Admin/import_button.html.twig
+++ b/src/CoreBundle/Resources/views/Admin/import_button.html.twig
@@ -1,3 +1,8 @@
-<a class="btn btn-sm" href="{{ admin.generateObjectUrl('import', admin.object) }}">
-    Custom Action
+{#<form action="{{ path('import') }}" method="post" {{ form_enctype(form) }}>#}
+    {#<input name="test" type="file" >#}
+    {#<input type="submit" value="Import" >#}
+{#</form>#}
+<a class="sonata-action-element" href="{{ path('import') }}">
+    <i class="glyphicon glyphicon-import" aria-hidden="true"></i>
+    Import
 </a>
